@@ -5,6 +5,11 @@ version 1.2:
 	- pommed: PowerBook5,5 has an ADB keyboard, not a USB keyboard.
 	- Added October 2003 iBook G4 support (PowerBook6,3), patch by
 	Arthur PETITPIERRE.
+	- pommed: tell DBus clients who is adjusting the keyboard
+	backlight, so they can decide to skip the notification if it's not
+	the user itself.
+	- gpomme: adapt to the new DBus notification.
+	- wmpomme: adapt to the new DBus notification.
 
 version 1.1:
 	- gpomme: added theme selection; use -t theme_name to select the
